RESOLVED FIXED43505
Window title for image documents shows corrupted characters instead of multiplication sign when using WebKit2
https://bugs.webkit.org/show_bug.cgi?id=43505
Summary Window title for image documents shows corrupted characters instead of multip...
Adam Roben (:aroben)
Reported 2010-08-04 13:26:31 PDT
To reproduce: 1. Go to http://webkit.org/images/download.png The window title has corrupted characters instead of a multiplication sign. This is because String::format doesn't correctly handle the UTF-8-encoded format string in WebPlatformStrategies::imageTitle on Windows.
Attachments
Patch (5.31 KB, patch)
2010-12-17 17:23 PST, Darin Adler
mitz: review+
Adam Roben (:aroben)
Comment 1 2010-08-04 13:27:05 PDT
Darin Adler
Comment 2 2010-12-17 17:23:12 PST
Darin Adler
Comment 3 2010-12-17 17:43:15 PST
Note You need to log in before you can comment on or make changes to this bug.